Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19189

Left Speaker volume can't reach Min/Max (Right does)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.16
    • Audio
    • None

    Description

      reactos-bootcd-0.4.15-dev-6658-g88808ba-x86-gcc-lin-dbg

      Left Speaker volume can't reach Min/Max (Right does)

      Similarly to CORE-19190

      Bug is not in cpl applet : https://github.com/reactos/reactos/pull/5974#pullrequestreview-1729730369 

      Attachments

        Issue Links

          Activity

            People

              Oleg Dubinskij Oleg Dubinskiy
              KRosUser KRosUser
              Votes:
              3 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: